Closed
Bug 1863691
Opened 2 years ago
Closed 1 year ago
Accent colors are no longer used in select
Categories
(Core :: Widget: Cocoa, defect)
Core
Widget: Cocoa
Tracking
()
VERIFIED
FIXED
121 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox119 | --- | unaffected |
| firefox120 | --- | unaffected |
| firefox121 | --- | fixed |
People
(Reporter: metasieben, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
No description provided.
| Reporter | ||
Comment 1•2 years ago
|
||
Looks like there is a regression when displaying accent colors in selects.
Summary: Accent olor drop down → Accent colors are no longer used in select
| Reporter | ||
Comment 2•2 years ago
|
||
| Reporter | ||
Comment 3•2 years ago
|
||
| Assignee | ||
Comment 4•2 years ago
|
||
Regression from bug 1861671 it seems.
Assignee: nobody → emilio
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: regression
Regressed by: 1861671
| Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(emilio)
| Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(emilio)
| Assignee | ||
Comment 5•2 years ago
|
||
Also remove some no-longer-used or hard-coded system colors.
Comment 6•2 years ago
|
||
Set release status flags based on info from the regressing bug 1861671
status-firefox119:
--- → unaffected
status-firefox120:
--- → unaffected
status-firefox121:
--- → affected
status-firefox-esr115:
--- → unaffected
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7ff7275fa0cd
Use non-deprecated system colors for menus on macOS. r=mac-reviewers,spohl
Comment 8•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
Comment 9•1 year ago
|
||
| bugherder | ||
Updated•1 year ago
|
Flags: qe-verify+
Comment 10•1 year ago
|
||
Matthias can you please attach the test/link that you used in order to reproduce the issue as I am not able to reproduce the issue on Mac 14 using Firefox build 119.0(2023101322658) and pdf with drop down menu http://foersom.com/net/HowTo/data/OoPdfFormExample.pdf .
Thank you.
Flags: needinfo?(mozilla)
| Reporter | ||
Comment 11•1 year ago
|
||
The issue was only visibile in the Nightly version of 121.
It has been fixed.
Flags: needinfo?(mozilla)
| Reporter | ||
Updated•1 year ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•