Bug 1863691 - Use non-deprecated system colors for menus on macOS. r=mac-reviewers,spohl

Also remove some no-longer-used or hard-coded system colors.

Differential Revision: https://phabricator.services.mozilla.com/D193059